--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,71 +7,30 @@
     android:layout_height="match_parent"
     tools:context="co.waspp.divait.helptheworld.activities.MainActivity" >
 
-    <!-- The main content view -->
-    <RelativeLayout
+    <android.support.design.widget.CoordinatorLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:paddingBottom="@dimen/activity_vertical_margin"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin" >
+        android:layout_height="match_parent">
 
-
-        <LinearLayout
-            android:orientation="horizontal"
+        <android.support.design.widget.AppBarLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/normal_margin"
-            android:baselineAligned="false"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true">
+            android:theme="@style/AppTheme.AppBarOverlay">
 
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:gravity="center">
-                <ImageButton
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:padding="@dimen/round_button_padding"
-                    android:background="@drawable/round_button_green"
-                    android:contentDescription="@string/recycle_button_description"
-                    app:srcCompat="@mipmap/ic_launcher"
-                    android:id="@+id/button_recycle" />
-            </LinearLayout>
+            <android.support.v7.widget.Toolbar
+                android:id="@+id/toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                android:background="?attr/colorPrimary"
+                app:layout_scrollFlags="scroll|enterAlways"
+                app:theme="@style/AppTheme.AppBarOverlay"
+                app:popupTheme="@style/AppTheme.PopupOverlay" />
 
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:gravity="center">
-                <ImageButton
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:padding="@dimen/round_button_padding"
-                    android:background="@drawable/round_button_purple"
-                    android:contentDescription="@string/dogs_button_description"
-                    app:srcCompat="@mipmap/ic_launcher"
-                    android:id="@+id/button_dogs" />
-            </LinearLayout>
+        </android.support.design.widget.AppBarLayout>
 
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:gravity="center">
-                <ImageButton
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:padding="@dimen/round_button_padding"
-                    android:background="@drawable/round_button_blue"
-                    android:contentDescription="@string/water_button_description"
-                    app:srcCompat="@mipmap/ic_launcher"
-                    android:id="@+id/button_water" />
-            </LinearLayout>
-        </LinearLayout>
-    </RelativeLayout>
+        <!-- The main content view -->
+        <include layout="@layout/content_main" />
+
+    </android.support.design.widget.CoordinatorLayout>
 
     <!-- The navigation drawer -->
     <android.support.design.widget.NavigationView android:id="@+id/drawer"
