--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#4f3fb5</color>
+    <color name="colorPrimary">#6856dc</color>
     <color name="colorPrimaryDark">#2b2684</color>
     <color name="colorAccent">#40ff7c</color>
 
