--- a/app/src/main/res/layout/fragment_guest_main.xml
+++ b/app/src/main/res/layout/fragment_guest_main.xml
@@ -30,7 +30,7 @@
             <ImageButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:padding="@dimen/round_button_padding"
+                android:padding="@dimen/button_padding"
                 android:background="@drawable/round_button_green"
                 android:contentDescription="@string/recycle_button_description"
                 app:srcCompat="@mipmap/ic_launcher"
@@ -45,7 +45,7 @@
             <ImageButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:padding="@dimen/round_button_padding"
+                android:padding="@dimen/button_padding"
                 android:background="@drawable/round_button_purple"
                 android:contentDescription="@string/dogs_button_description"
                 app:srcCompat="@mipmap/ic_launcher"
@@ -60,7 +60,7 @@
             <ImageButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:padding="@dimen/round_button_padding"
+                android:padding="@dimen/button_padding"
                 android:background="@drawable/round_button_blue"
                 android:contentDescription="@string/water_button_description"
                 app:srcCompat="@mipmap/ic_launcher"
