--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,10 +1,15 @@
 <resources>
-    <!-- Default screen margins, per the Android Design guidelines. -->
+    <!-- Screen margins -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="activity_medium_horizontal_margin">32dp</dimen>
+    <dimen name="activity_medium_vertical_margin">32dp</dimen>
+    <dimen name="login_activity_top_margin">48dp</dimen>
 
-    <dimen name="round_button_padding">12dp</dimen>
+    <!-- Utils -->
+    <dimen name="button_padding">12dp</dimen>
     <dimen name="normal_margin">8dp</dimen>
+    <dimen name="medium_margin">16dp</dimen>
     <dimen name="large_margin">24dp</dimen>
 
     <!-- Drawer -->
