--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -6,10 +6,12 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_medium_horizontal_margin"
     android:paddingRight="@dimen/activity_medium_horizontal_margin"
-    android:paddingTop="@dimen/login_activity_top_margin">
+    android:paddingTop="@dimen/login_activity_top_margin"
+    android:gravity="center_horizontal">
 
     <!-- Logo -->
     <ImageView android:src="@mipmap/ic_launcher"
+        android:contentDescription="@string/app_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="24dp"
