--- a/app/src/main/res/layout/fragment_guest_main.xml
+++ b/app/src/main/res/layout/fragment_guest_main.xml
@@ -33,7 +33,7 @@
                 android:padding="@dimen/button_padding"
                 android:background="@drawable/round_button_green"
                 android:contentDescription="@string/recycle_button_description"
-                app:srcCompat="@mipmap/ic_launcher"
+                app:srcCompat="@drawable/caneca"
                 android:id="@+id/button_recycle" />
         </LinearLayout>
 
@@ -48,7 +48,7 @@
                 android:padding="@dimen/button_padding"
                 android:background="@drawable/round_button_purple"
                 android:contentDescription="@string/dogs_button_description"
-                app:srcCompat="@mipmap/ic_launcher"
+                app:srcCompat="@drawable/perro"
                 android:id="@+id/button_dogs" />
         </LinearLayout>
 
@@ -63,7 +63,7 @@
                 android:padding="@dimen/button_padding"
                 android:background="@drawable/round_button_blue"
                 android:contentDescription="@string/water_button_description"
-                app:srcCompat="@mipmap/ic_launcher"
+                app:srcCompat="@drawable/agua"
                 android:id="@+id/button_water" />
         </LinearLayout>
     </LinearLayout>
