--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -7,6 +7,7 @@
     android:paddingLeft="@dimen/activity_medium_horizontal_margin"
     android:paddingRight="@dimen/activity_medium_horizontal_margin"
     android:paddingTop="@dimen/login_activity_top_margin"
+    android:layout_marginTop="?attr/actionBarSize"
     android:gravity="center_horizontal">
 
     <!-- Logo -->
